--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Mint Page",
-  "name": "Mint Page",
+  "short_name": "CS MW",
+  "name": "CryptoShards Mint Website",
   "icons": [
     {
       "src": "logo.jpg",
